Corrected spelling at "URL based routing" para
changed “descried sceanrio” to "described scenario"

--- a/documentationbasic/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
@@ -251,7 +251,7 @@ oc set route-backends slave-app-route slave-app-v1-0=0 slave-app-v2-0=100
 
 === URL based routing
 
-Many organisations want to use a common URL for their web sites so that it is easy for users. This is often achieved by pointing a specific URL at an OpenShift cluster route within a global load balancer function, however this is not essential and it is possible to use routes to achieve the same result. Take as an example a holiday company called myholiday.com. The company wishes to sell package holidays, short breaks, cruises and adventure holidays and they create different applications for these purposes. By using a common host name in a series of route it is possible to ensure that traffic flows to the right location, based on the path of the url used. The diagram below shows the descried sceanrio and how the routes, services and applications work together
+Many organisations want to use a common URL for their web sites so that it is easy for users. This is often achieved by pointing a specific URL at an OpenShift cluster route within a global load balancer function, however this is not essential and it is possible to use routes to achieve the same result. Take as an example a holiday company called myholiday.com. The company wishes to sell package holidays, short breaks, cruises and adventure holidays and they create different applications for these purposes. By using a common host name in a series of route it is possible to ensure that traffic flows to the right location, based on the path of the url used. The diagram below shows the described scenario and how the routes, services and applications work together
 
 image::deployment-strategies-4.png[URL based routing]
 
