--- a/documentationadvanced/ocp4devex/src/main/asciidoc/prereq.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/prereq.asciidoc
@@ -4,6 +4,8 @@
 
 *The workshop was designed and tested on the Chrome browser and it is advised to avoid issues that this browser be used whenever possible*
 
+TIP: For a number of the labs you will be interacting with the OpenShift cluster using a number of different command line tools. In order to avoid you having to install them on your own machine we have taken advantage of the nature of OpenShift and produced a Container that does it all for you, and provides a terminal experience in the browser. In this section you will create that application; this terminal is used throughout the workshop.
+
 Open the browser and navigate to the console url {webConsoleUrl}[{webConsoleUrl}, window="_blank"]
 
 Logon using the user provided by the course administrator (userx where x is a unique number for your session)
