--- a/documentationbasic/ocp4devex/src/main/asciidoc/prereq.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/prereq.asciidoc
@@ -8,13 +8,13 @@ TIP: For a number of the labs you will be interacting with the OpenShift cluster
 
 Open the browser and navigate to the console url {webConsoleUrl}[{webConsoleUrl}, window="_blank"]
 
-Logon using the user provided by the course administrator (userx where x is a unique number for your session)
+Logon using the user provided by the course administrator (user*x* where *x* is a unique number for your session)
 
 When logged on you will be presented with a screen listing the projects, of which there are currently none
 
 Hit 'Create Project'
 
-For 'Name' enter terminalx, where x is your unique number
+For 'Name' enter terminal*x*, where *x* is the same unique number from your UserID (user*X*)
 
 'Display Name' and 'Description' are optional labels
 
@@ -30,9 +30,9 @@ Leave everything else as default and scroll down to the bottom of the page. Hit 
 
 Wait for the ring around the application icon to change to dark blue - this indicates the application has been started
 
-In the topology page click on the 'Show URL' icon as shown below
+In the topology page click on the 'Open URL' icon as shown below
 
-image::prereq-1.png[Selecting the Show URL]
+image::prereq-1.png[Selecting the Open URL]
 
 This will open another tab with a command line in it - this is your terminal for the duration of the basic workshop
 
