Re-categorised some labs based on the new set of categories

--- a/labs/src/applicationbasics.asciidoc
+++ b/labs/src/applicationbasics.asciidoc
@@ -1,4 +1,4 @@
-== Application Basics [ESSENTIALS]
+== Application Basics [INTRODUCTION]
 
 Author: Ian Lawson (feedback to ian.lawson@redhat.com)
 
