--- a/labs/src/introductiontooc.asciidoc
+++ b/labs/src/introductiontooc.asciidoc
@@ -1,4 +1,4 @@
-== Introduction to 'oc' [ESSENTIALS]
+== Introduction to 'oc' [INTRODUCTION]
 
 Author: Ian Lawson (feedback to ian.lawson@redhat.com)
 
