--- a/labs/src/introductiontooc.asciidoc
+++ b/labs/src/introductiontooc.asciidoc
@@ -86,9 +86,18 @@ Every object can be described using JSON or YAML - this command returns, from th
 
 === Adding some Applications
 
-We are going to take advantage of some of the OpenShift's opinionated developer features with the next part. Rather than manually create all the objects we would need for an Application from scratch on OpenShift, which would include a BuildConfig, which describes how to build the Image that will contain our Application, a Build, which is the actual task that executes the BuildConfig, in a Pod, to generate out Application Image, a Service, which is the IP endpoint for the Application within the OpenShift Cluster and an ImageStream, which is a wrapper around the created Image. 
+OpenShift works with the concept of 'Applications'. An Application translates, in OpenShift speak, to all the object components needed to build and deploy an Application in a Container, and orchestrate that Application appropriately (multiple copies of the Container, configuration settings and the like).
 
-We can shortcut this as developers, if we have, for example, a GitHub repo with existing code. Type the following:
+If we started at absolute basics and created all the objects we need for an Application in OpenShift we would have a number of things to remember to created. This would include:
+
+. A BuildConfig, which describes how to build the Image that will contain our Application
+. A Build, which is the actual task that executes the BuildConfig, in a Pod, to generate our Application Image
+. A Service, which is the IP endpoint for the Application within the OpenShift Cluster
+. An ImageStream, which is a wrapper around the created Image. 
+. A DeploymentConfig, which tells OpenShift how to physically orchestrate the Application
+. A Route, which provides the external connectivity into the Application
+
+Fortunately we can shortcut this as developers, if we have, for example, a GitHub repo with existing code. Type the following:
 
 [source]
 ----
@@ -136,7 +145,7 @@ Again use the 'oc get pods' and 'oc status' to watch the build of the second app
 
 image::ocintro8.png[working pods for app2]
 
-=== Using oc for manipulating existing objects
+=== Using oc to manipulate existing objects
 
 Now we will show the power of the oc command. First, type the following:
 
