Minor cosmetic changes

--- a/labs/src/servicemesh.asciidoc
+++ b/labs/src/servicemesh.asciidoc
@@ -16,7 +16,7 @@ Istio is an implementation of the service-mesh and this component is responsible
 
 ==== Kiali 
 
-Kiali provides the observability capability to the Red Hat Service Mesh. This enables users to build a picture of service interaction, observe traffic and look in detail at the resources that are added to the OpenShit platform to create the operational service mesh. Kiali is used to understand the structure of the mesh and to gather metrics. A link is available to from Kiali to Jaeger for distributed tracing.
+Kiali provides the observability capability to the Red Hat Service Mesh. This enables users to build a picture of service interaction, observe traffic and look in detail at the resources that are added to the OpenShift platform to create the operational service mesh. Kiali is used to understand the structure of the mesh and to gather metrics. A link is available to from Kiali to Jaeger for distributed tracing.
 
 ==== Jaeger
 
